# football-dq

./: .gitignore  Cargo.toml  README.md  cli_err.txt  cli_err2.txt  cli_err2_utf8.txt  cli_err_utf8.txt  final_cli.txt  final_cli_utf8.txt  fix_traits.py  link_error.txt  poc_dq_pipeline.py  requirements.txt  test_err.txt  under_err.txt
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs  server.rs
crates/api/src/controllers/: extract.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  linker.rs  models.rs  reconciler.rs
crates/domain/: Cargo.toml
crates/domain/src/: db.rs  error.rs  models.rs  reconciliation.rs
crates/domain/src/models/: dq_match.rs  extraction.rs  linked_match.rs  mod.rs
crates/extractors/: Cargo.toml
crates/extractors/src/: clubelo.rs  common.rs  espn.rs  fbref.rs  lib.rs  matchhistory.rs  normalize.rs  official.rs  parsers.rs  sofascore.rs  sofifa.rs  understat.rs  whoscored.rs
data/ESPN/: schedule_EPL.json
data/FBref/: schedule.html
data/MatchHistory/: 2526_E0.csv
data/SoFIFA/: players_all.html
data/Sofascore/: schedule_2526_EPL.json
data/Understat/: schedule_2526_EPL.html  schedule_2526_EPL.json
data/WhoScored/: schedule_2526_EPL.html
docs/: README.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: MatchDetail.tsx  MatchList.tsx
pipelines/: __init__.py  daily_pipeline.py
rules/: README.md  xg_quality_rules.yaml
scripts/: README.md  ci_checks.bat  load_data.py  run_dq.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  instrument.py  main.py
src/api/controllers/: golden_controller.py  quality_controller.py  reconciliation_controller.py
src/api/repositories/: golden_repository.py  quality_repository.py  reconciliation_repository.py
src/api/routes/: golden_routes.py  quality_routes.py  reconciliation_routes.py
src/api/schemas/: golden.py  quality.py  reconciliation.py
src/api/services/: golden_service.py  quality_service.py  reconciliation_service.py
src/api/utils/: errors.py
src/config/: __init__.py  settings.py
src/dashboard/: __init__.py  app.py
src/extractors/: __init__.py  base.py  clubelo.py  espn.py  fbref.py  loader.py  match_history.py  sofascore.py  understat.py  whoscored.py
src/golden_record/: __init__.py  engine.py
src/pipelines/: daily_pipeline.py  ingestion.py
src/quality/: __init__.py  checks.py  rule_parser.py  scorer.py
src/reconciliation/: __init__.py  reconciler.py
src/storage/: __init__.py  database.py  golden_models.py  models.py
tests/: __init__.py  test_dynamic_rules.py
tests/test_extractors/: __init__.py
tests/test_quality/: __init__.py
tests/test_reconciliation/: __init__.py
