[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
anyhow.workspace = true
