[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
extractors = { path = "../extractors" }
domain = { path = "../domain" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json = "1.0"
tracing.workspace = true
anyhow.workspace = true
sqlx.workspace = true
tower-http = { version = "0.5", features = ["cors"] }
tracing-subscriber.workspace = true
