[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
api = { path = "../api" }
extractors = { path = "../extractors" }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
domain = { version = "0.1.0", path = "../domain" }
serde_json = "1.0"
sqlx.workspace = true
dq_core = { path = "../core", package = "core" }
