[package]
name = "domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json = "1.0"
anyhow.workspace = true
tracing.workspace = true
