[package]
name = "extractors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
anyhow.workspace = true
csv = "1.4.0"
serde_json = "1.0.149"
tracing.workspace = true
headless_chrome = "1.0.10"
chrono = "0.4"
